# ton-client-jni

./: Cargo.toml
.cargo/: config
src/: client.rs  lib.rs
