[package]
name = "ton_client_jni"
version = "1.0.0"
authors = ["Maxim Dorofeev"]
license = "Apache-2.0"

[lib]
name = "tonclientjni"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
lazy_static = "1.1.0"
jni = { version = "0.12.0", default-features = false }
ton_client = { git = "https://github.com/tonlabs/TON-SDK.git", default-features = true }


[profile.release]
lto = true
